@@ -1,0 +1,1 @@
+alter table shop_purchases_relationship add index(outer_id,outer_sku_id);
