@@ -1,0 +1,1 @@
+alter table shop_trades_mergeorder add index(outer_id,outer_sku_id);
