@@ -271,10 +271,9 @@
 									<th>产品名</th>
 									<th>规格编码</th>
 									<th>规格名</th>
-									<th>供应商货号</th>
-									<th style="width:70px;">标准进价</th>
 									<th style="width:70px;">实际进价</th>
 									<th style="width:70px;">采购数</th>
+									<th style="width:70px;">总费用</th>
 									<th>操作</th>
 							</thead>
 							<tbody>
@@ -285,10 +284,9 @@
 									<td>{{ item.name }}</td>
 									<td>{{ item.outer_sku_id }}</td>
 									<td>{{ item.properties_name }}</td>
-									<td>{{ item.supplier_item_id }}</td>
-									<td>{{ item.std_price }}</td>
 									<td>{{ item.price }}</td>
 									<td>{{ item.purchase_num }}</td>
+									<td>{{ item.total_fee }}</td>
 									<td>
 										<a class="edit" href=""><icon class="icon-pencil"></icon></a>
 										<a class="delete" href=""><icon class="icon-remove"></icon></a>
@@ -339,8 +337,6 @@
 						<th>商品名</th>
 						<th>规格编码</th>
 						<th>规格名</th>
-						<th>供应商货号</th>
-						<th>标准进价</th>
 						<th>实际进价</th>
 						<th>采购数</th>
 						<th>操作</th>
