@@ -1,3 +1,7 @@
+######### 2013-7-4  ###########
+alter table shop_purchases_purchase add column purchase_num int(11) default 0;
+alter table shop_purchases_purchase add column storage_num int(11) default 0;
+alter table shop_purchases_item add column storage_num int(11) default 0;
 ######### 2013-6-29 ###########
 ALTER TABLE shop_purchases_purchase AUTO_INCREMENT=9999;
 ######### 2013-6-26 ###########
